src/test/deca/context/valid/Objet/Selection-DownCast.deca
// Description:
//      Casting down and trying to call method
//
// Results:
//      nothing
//
// History:
//      created on 17/1/2022

class A {
    int x;
    void foo() {
    }
}

class B extends A{
    int y;
    int fooB() {

    }
}

{
    A a = new A();
    B b = (B) (a);
    print(b.x);
}
